<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
        <TextView android:layout_height="wrap_content" android:id="@+id/accuracyDescription" android:layout_width="fill_parent" android:paddingBottom="15px" android:text="@string/accuracy_message"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/locationHeader" android:text="@string/locationTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/linearLayout8" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/imageView1" android:src="@drawable/location" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:editable="false" android:text="@string/locationTitle" android:id="@+id/editLocation"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/location" android:layout_height="wrap_content" android:paddingLeft="20px" android:paddingRight="30px"></SeekBar>
        </LinearLayout>
        <TextView android:layout_height="wrap_content" android:id="@+id/movementHeader" android:text="@string/movementTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/imageView2" android:src="@drawable/movement" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/movementTitle" android:editable="false" android:id="@+id/editMovement"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/movement" android:layout_height="wrap_content" android:paddingRight="30px" android:paddingLeft="20px"></SeekBar>
        </LinearLayout>
        <TextView android:layout_height="wrap_content" android:id="@+id/weatherHeader" android:text="@string/weatherTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/ImageView01" android:src="@drawable/weather" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/weatherTitle" android:id="@+id/editWeather" android:editable="false"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/weather" android:layout_height="wrap_content" android:paddingLeft="20px" android:paddingRight="30px"></SeekBar>
        </LinearLayout>
        <TextView android:layout_height="wrap_content" android:id="@+id/socialHeader" android:text="@string/socialTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/ImageView02" android:src="@drawable/social" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/socialTitle" android:id="@+id/editSocial" android:editable="false"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/social" android:layout_height="wrap_content" android:paddingLeft="20px" android:paddingRight="30px"></SeekBar>
        </LinearLayout>
        <TextView android:layout_height="wrap_content" android:id="@+id/systemHeader" android:text="@string/systemTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/LinearLayout05" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/ImageView04" android:src="@drawable/system" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editSystem" android:text="@string/systemTitle" android:editable="false"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout5" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/system" android:layout_height="wrap_content" android:paddingLeft="20px" android:paddingRight="30px"></SeekBar>
        </LinearLayout>
        <TextView android:layout_height="wrap_content" android:id="@+id/derivedHeader" android:text="@string/derivedTitle" android:layout_width="wrap_content"></TextView>
        <LinearLayout android:id="@+id/LinearLayout04" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/ImageView03" android:src="@drawable/derived" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editDerived" android:text="@string/derivedTitle" android:editable="false"></EditText>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout6" android:layout_width="fill_parent" android:paddingBottom="10px" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView6" android:text="@string/accuracy" android:layout_width="wrap_content"></TextView>
            <SeekBar android:layout_width="fill_parent" android:id="@+id/derived" android:layout_height="wrap_content" android:paddingLeft="20px" android:paddingRight="30px"></SeekBar>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout7" android:layout_width="wrap_content" android:layout_height="fill_parent" android:paddingTop="10px">
            <Button android:id="@+id/SubmitButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/submit"></Button>
            <Button android:id="@+id/ResetButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/reset"></Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
