<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/app_name" xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="General"
		android:key="PREFS_GENERAL">
		<CheckBoxPreference android:key="PREFS_STARTUP_ENABLED"
			android:title="Run at Startup" android:summaryOn="Run at Startup Enabled"
			android:summaryOff="Run at Startup Disabled"></CheckBoxPreference>
		<CheckBoxPreference android:key="PREFS_ACCURACY_POPUP_ENABLED"
			android:title="Context Accuracy Popup" android:summaryOn="Context Accuracy Popup Enabled"
			android:summaryOff="Context Accuracy Popup Disabled"></CheckBoxPreference>
		<CheckBoxPreference android:key="PREFS_ACCURACY_POPUP_SOUND_ENABLED"
			android:title="Context Accuracy Audio" android:summaryOn="Context Accuracy Audio Enabled"
			android:summaryOff="Context Accuracy Audio Disabled"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/prefs_popup_freq_values"
			android:entries="@array/prefs_popup_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Context Popup Frequency"
			android:title="Context Popup Frequency" android:key="PREFS_POPUP_FREQ"></ListPreference>
		<ListPreference android:entryValues="@array/prefs_popup_dismiss_freq_values"
			android:entries="@array/prefs_popup_dismiss_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Context Popup Auto-Dismiss"
			android:title="Context Popup Auto-Dismiss" android:key="PREFS_POPUP_DISMISS_FREQ"></ListPreference>
	</PreferenceCategory>
	<PreferenceCategory android:key="PREFS_LOCATION"
		android:title="Location Paramaters">
		<CheckBoxPreference android:key="PREFS_LOCATION_ENABLED"
			android:title="Location" android:summaryOn="Location Context Enabled"
			android:summaryOff="Location Context Disabled"></CheckBoxPreference>
		<CheckBoxPreference android:title="Proximity"
			android:summaryOn="Proximity Context Enabled" android:key="PREFS_PROXIMITY_ENABLED"
			android:summaryOff="Proximity Context Disabled"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Location Poll Frequency"
			android:title="Location Poll Frequency" android:key="PREFS_LOCATION_POLL_FREQ"></ListPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Location Store Frequency"
			android:title="Location Store Frequency" android:key="PREFS_LOCATION_STORE_FREQ"></ListPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="Movement Paramaters"
		android:key="PREFS_MOVEMENT">
		<CheckBoxPreference android:key="PREFS_MOVEMENT_ENABLED"
			android:title="Movement" android:summaryOn="Movement Context Enabled"
			android:summaryOff="Movement Context Disabled"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Movement Poll Frequency"
			android:title="Movement Poll Frequency" android:key="PREFS_MOVEMENT_POLL_FREQ"></ListPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Movement Store Frequency"
			android:title="Movement Store Frequency" android:key="PREFS_MOVEMENT_STORE_FREQ"></ListPreference>
	</PreferenceCategory>
	<PreferenceCategory android:key="PREFS_WEATHER"
		android:title="Weather Paramaters">
		<CheckBoxPreference android:title="Weather"
			android:summaryOn="Weather Context Enabled" android:key="PREFS_WEATHER_ENABLED"
			android:summaryOff="Weather Context Disabled"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Weather Poll Frequency"
			android:title="Weather Poll Frequency" android:key="PREFS_WEATHER_POLL_FREQ"></ListPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Weather Store Frequency"
			android:title="Weather Store Frequency" android:key="PREFS_WEATHER_STORE_FREQ"></ListPreference>
	</PreferenceCategory>
	<PreferenceCategory android:key="PREFS_SYSTEM"
		android:title="System Paramaters">
		<CheckBoxPreference android:title="System"
			android:summaryOn="System Context Enabled" android:key="PREFS_SYSTEM_ENABLED"
			android:summaryOff="System Context Disabled"></CheckBoxPreference>		
	</PreferenceCategory>
	<PreferenceCategory android:key="PREFS_SOCIAL"
		android:title="Social Paramaters">
		<CheckBoxPreference android:title="Social"
			android:summaryOn="Social Context Enabled" android:key="PREFS_SOCIAL_ENABLED"
			android:summaryOff="Social Context Disabled"></CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory android:key="PREFS_DERIVED"
		android:title="Derived Paramaters">
		<CheckBoxPreference android:title="Derived"
			android:summaryOn="Derived Context Enabled" android:key="PREFS_DERIVED_ENABLED"
			android:summaryOff="Derived Context Disabled"></CheckBoxPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Derived Calculation Frequency"
			android:title="Derived Calculation Frequency" android:key="PREFS_DERIVED_CALC_FREQ"></ListPreference>
		<ListPreference android:entryValues="@array/prefs_polling_freq_values"
			android:entries="@array/prefs_polling_freq" android:defaultValue="1"
			android:negativeButtonText="@string/cancel"
			android:positiveButtonText="@string/ok" android:dialogTitle="Derived Store Frequency"
			android:title="Derived Store Frequency" android:key="PREFS_DERIVED_STORE_FREQ"></ListPreference>
	</PreferenceCategory>
		<PreferenceCategory android:key="PREFS_DEBUG"
		android:title="Debugging Options">
		<CheckBoxPreference android:key="PREFS_SHAKE_ENABLED"
			android:title="Shake Response" android:summaryOn="Instant-On Shake Response Enabled"
			android:summaryOff="Instant-On Shake Response Disabled"></CheckBoxPreference>
		<CheckBoxPreference android:key="PREFS_TTS_ENABLED"
			android:title="TTS Context" android:summaryOn="Text-to-Speech Response Enabled"
			android:summaryOff="Text-to-Speech Response Disabled"></CheckBoxPreference>

	</PreferenceCategory>
</PreferenceScreen>
